--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "motel",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "data-vacancy observer",
   "main": "src/index.js",
+  "repository": "https://github.com/greim/motel",
   "scripts": {
     "lint": "eslint --max-warnings 0 src/*.js",
     "test": "mocha --compilers=js:babel-register $(find src -name \"*.test.js\")",
