--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "motel",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "data-vacancy observer",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "repository": "https://github.com/greim/motel",
   "scripts": {
     "lint": "eslint --max-warnings 0 src/*.js",
     "test": "mocha --compilers=js:babel-register $(find src -name \"*.test.js\")",
-    "build": "babel src -d lib --ignore '**/*.test.js'",
+    "build": "babel src -d lib --ignore '**/*.test.js' && browserify lib/index.js -s motel -o lib/bundle.js",
     "sanity": "npm run lint && npm test && npm run build",
-    "prepublish": "npm run sanity",
-    "bundle": "npm run build && browserify lib/index.js -s motel -o lib/bundle.js"
+    "prepublish": "npm run sanity"
   },
   "keywords": [
     "data-fetching",
