--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "lib/index.js",
   "repository": "https://github.com/greim/motel",
   "scripts": {
+    "manual-test": "browserify test-app/test-app.js -o test-app/main.js && here -d test-app",
     "lint": "eslint --max-warnings 0 src/*.js",
     "test": "mocha --compilers=js:babel-register $(find src -name \"*.test.js\")",
-    "build": "babel src -d lib --ignore '**/*.test.js' && browserify lib/index.js -s motel -o lib/bundle.js",
+    "compile": "babel src -d lib --ignore '**/*.test.js'",
+    "build": "npm run compile && browserify lib/index.js -s motel -o lib/bundle.js",
     "sanity": "npm run lint && npm test && npm run build",
     "prepublish": "npm run sanity"
   },
@@ -27,6 +29,7 @@
     "eslint": "^3.19.0",
     "eslint-plugin-babel": "^4.1.1",
     "mocha": "^3.3.0",
+    "serve-here": "^3.2.0",
     "sinon": "^2.1.0"
   },
   "dependencies": {
