--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "browser-test": "browserify test-app/test-app.js -o test-app/main.js && here -d test-app",
     "lint": "eslint --max-warnings 0 src/*.js",
-    "test": "mocha --compilers=js:babel-register $(find src -name \"*.test.js\")",
+    "test": "mocha --require=babel-register $(find src -name \"*.test.js\")",
     "compile": "babel src -d lib --ignore '**/*.test.js'",
     "build": "npm run compile && browserify lib/index.js -s motel -o lib/bundle.js",
     "sanity": "npm run lint && npm test && npm run build",
@@ -28,7 +28,7 @@
     "browserify": "^14.3.0",
     "eslint": "^6.7.2",
     "eslint-plugin-babel": "^4.1.1",
-    "mocha": "^3.3.0",
+    "mocha": "^6.2.2",
     "serve-here": "^3.2.0",
     "sinon": "^2.1.0"
   },
