--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "eslint --max-warnings 0 src/*.js",
     "test": "mocha --require=babel-register $(find src -name \"*.test.js\")",
     "compile": "babel src -d lib --ignore '**/*.test.js'",
-    "build": "npm run compile && browserify lib/index.js -s motel -o lib/bundle.js",
-    "sanity": "npm run lint && npm test && npm run build",
+    "sanity": "npm run lint && npm test && npm run compile",
     "prepublish": "npm run sanity"
   },
   "keywords": [
@@ -25,7 +24,7 @@
     "babel-eslint": "^7.2.3",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-register": "^6.24.1",
-    "browserify": "^14.3.0",
+    "browserify": "^16.5.0",
     "eslint": "^6.7.2",
     "eslint-plugin-babel": "^4.1.1",
     "mocha": "^6.2.2",
