--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "browser-test": "browserify test-app/test-app.js -o test-app/main.js && here -d test-app",
     "lint": "eslint --max-warnings 0 src/*.js",
-    "test": "mocha --require=babel-register $(find src -name \"*.test.js\")",
-    "compile": "babel src -d lib --ignore '**/*.test.js'",
+    "test": "mocha ./src/**/*.js",
+    "compile": "cp -r src/ lib/",
     "sanity": "npm run lint && npm test && npm run compile",
     "prepublish": "npm run sanity"
   },
@@ -20,10 +20,6 @@
   "author": "Greg Reimer <gregreimer@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-register": "^6.24.1",
     "browserify": "^16.5.0",
     "eslint": "^6.7.2",
     "eslint-plugin-babel": "^4.1.1",
