--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "motel",
   "version": "0.2.1",
   "description": "data-vacancy observer",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "repository": "https://github.com/greim/motel",
   "scripts": {
     "browser-test": "npm run compile && browserify test-app/test-app.js -o test-app/main.js && here -d test-app",
     "lint": "eslint --max-warnings 0 src/*.ts",
     "test": "mocha -r ts-node/register ./src/**/*.ts",
-    "compile": "tsc --outDir lib/",
+    "compile": "tsc --declaration --outDir lib/",
     "sanity": "npm run lint && npm test && npm run compile",
     "prepublish": "npm run sanity"
   },
@@ -30,11 +31,11 @@
     "eslint-plugin-babel": "^4.1.1",
     "mocha": "^6.2.2",
     "serve-here": "^3.2.0",
-    "sinon": "^2.1.0"
+    "sinon": "^2.1.0",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.3"
   },
   "dependencies": {
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3",
     "url-pattern": "^1.0.3"
   }
 }
