--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "motel",
-  "version": "0.2.1",
+  "version": "1.0.0-alpha.1",
   "description": "data-vacancy observer",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
