--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "browser-test": "npm run compile && browserify test-app/test-app.js -o test-app/main.js && here -d test-app",
     "lint": "eslint --max-warnings 0 src/*.ts",
     "test": "mocha -r ts-node/register ./src/**/*.ts",
-    "compile": "tsc --declaration --outDir lib/",
+    "compile": "tsc --declaration --declarationMap --outDir lib/",
     "typedoc": "typedoc --out docs --excludeExternals --excludeNotExported --excludePrivate --name \"Motel API Documentation\" --mode file --theme typedoc-theme src/index.ts src/telemetry.ts && touch docs/.nojekyll",
     "sanity": "npm run lint && npm test && npm run compile && npm run typedoc",
     "prepublish": "npm run sanity"
   },
+  "files": [
+    "mit-license.txt",
+    "readme.md",
+    "lib"
+  ],
   "keywords": [
     "data-fetching",
     "react",
@@ -29,11 +34,10 @@
     "@typescript-eslint/parser": "^2.10.0",
     "browserify": "^16.5.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-babel": "^4.1.1",
     "mocha": "^6.2.2",
     "serve-here": "^3.2.0",
     "sinon": "^7.5.0",
-    "ts-node": "^8.5.4",
+    "ts-node": "^9.1.0",
     "typedoc": "^0.15.4",
     "typescript": "^4.1.2"
   },
